syntax = "proto3";
package oraichain.orai.airesult;
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "x/websocket/types/types_validator.proto";
import "x/provider/types/types_ds.proto";
import "x/provider/types/types_tc.proto";
option go_package = "github.com/oraichain/orai/x/airesult/types";

message Reward {
  option (gogoproto.goproto_stringer) = true;
  repeated oraichain.orai.websocket.Validator validators = 1 [(gogoproto.nullable) = false];
  int64 block_height = 2;
  repeated cosmos.base.v1beta1.Coin validator_fees = 3 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.moretags) = "json:\"validator_fees\""];
  repeated DataSourceFees list_d_source_fees = 4;
  repeated TestCaseFees list_t_case_fees = 5;
  repeated string data_source_names = 6;
  repeated string test_case_names = 7;
}

message DataSourceFees {
  option (gogoproto.goproto_stringer) = true;
  repeated cosmos.base.v1beta1.Coin fees = 1 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.moretags) = "json:\"data_source_fees\""];
}

message TestCaseFees {
  option (gogoproto.goproto_stringer) = true;
  repeated cosmos.base.v1beta1.Coin fees = 1 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.moretags) = "json:\"test_case_fees\""];
}